--- a/src/ui/Chatbot.css
+++ b/src/ui/Chatbot.css
@@ -25,13 +25,16 @@
   .chatbot-messages-wrapper {
     max-height: 100%;
     overflow-y: auto; /* Allows messages to scroll */
-  }
+    position: relative;
+    z-index: 10; /* 채팅 메시지를 맨 위에 표시 */
+}
   
   .message {
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
     max-width: 60%;
+    z-index: 20; /* 채팅 메시지를 맨 위에 표시 */
   }
   
   .message.user {
@@ -71,20 +74,52 @@
 /* 자음과 모음에 대한 스타일 및 애니메이션 추가 */
 .floating-letter {
     position: absolute;
-    font-size: 24px;
-    animation: float 10s infinite ease-in-out;
-    opacity: 0.7;
+    font-size: 17px;
+    animation: float 15s infinite ease-in-out;
+    opacity: 0.3;
+    z-index: 5; /* 채팅 메시지보다 뒤에 표시 */
   }
-  
-  @keyframes float {
-    0% {
+
+.animated-letter {
+    transition: all 1.5s ease-in-out;
+    z-index: 10; /* 애니메이션 동안 채팅 메시지 위로 올림 */
+    opacity: 1; /* 애니메이션 동안 투명도 변경 */
+}
+
+.blue-glow {
+  animation: blue-glow 1.5s ease-in-out;
+}
+
+/* float 애니메이션을 자연스럽게 만듭니다. */
+@keyframes float {
+  0% {
       transform: translate(0, 0);
-    }
-    50% {
-      transform: translate(50px, 50px);
-    }
-    100% {
-      transform: translate(0, 0);
-    }
   }
-  
+  20% {
+      transform: translate(30px, -20px);
+  }
+  40% {
+      transform: translate(-25px, 30px);
+  }
+  60% {
+      transform: translate(20px, -15px);
+  }
+  80% {
+      transform: translate(-20px, 25px);
+  }
+  100% {
+      transform: translate(0, 0);
+  }
+}
+
+@keyframes blue-glow {
+  0% {
+      box-shadow: 0 0 5px rgba(3, 169, 244, 0.5);
+  }
+  50% {
+      box-shadow: 0 0 20px rgba(3, 169, 244, 1);
+  }
+  100% {
+      box-shadow: 0 0 5px rgba(3, 169, 244, 0.5);
+  }
+}
