--- a/src/ui/SideBar.css
+++ b/src/ui/SideBar.css
@@ -1,45 +1,48 @@
 .sidebar {
-    width: 200px;
-    background-color: #ffffff;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 60px; /* 상단바 아래에 위치 */
-    bottom: 0;
-    left: 0;
-    align-items: center; /* 가로 정렬을 가운데로 */
-    overflow: auto; /* 화면이 작아지면 스크롤 가능하도록 설정 */
-  }
-  
-  .profile {
-    margin-top: 50px;
-    margin-bottom: 200px;
-  }
-  
-  .profile-image {
-    width: 150px; /* 원하는 크기로 조정 */
-    height: 150px; /* 원하는 크기로 조정 */
-    border-radius: 50%; /* 원형 이미지로 만들기 */
-  }
-  
-  .sidebar-link {
-    width: 100%;
-    border: none;
-    border-radius: 8px;
-    padding: 10px;
-    margin-bottom: 40px;
-    cursor: pointer;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    font-size: 24px;
-  }
-  
-  .sidebar-link:last-child {
-    margin-bottom: 0; /* 마지막 버튼에는 간격을 주지 않음 */
-  }
+  width: 200px;
+  background-color: #ffffff;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 60px; /* 상단바 아래에 위치 */
+  bottom: 0;
+  left: 0;
+  align-items: center; /* 가로 정렬을 가운데로 */
+  overflow: auto; /* 화면이 작아지면 스크롤 가능하도록 설정 */
+}
 
-  .sidebar-button:hover {
-    background-color: #d4d4f5;
-  }
-  
+.profile {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.profile-image {
+  width: 150px; /* 원하는 크기로 조정 */
+  height: 150px; /* 원하는 크기로 조정 */
+  border-radius: 50%; /* 원형 이미지로 만들기 */
+  border: 4px solid #4CAF50; /* 테두리 추가 */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 박스 쉐도우 추가 */
+}
+
+.sidebar-link {
+  width: 100%;
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
+  margin-bottom: 40px;
+  cursor: pointer;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
+  transition: background-color 0.3s; /* 호버 효과를 부드럽게 전환 */
+}
+
+.sidebar-link:last-child {
+  margin-bottom: 0; /* 마지막 버튼에는 간격을 주지 않음 */
+}
+
+.sidebar-link:hover {
+  background-color: #d4d4f5;
+}
