--- a/src/ui/Login.css
+++ b/src/ui/Login.css
@@ -15,11 +15,10 @@ body {
 /* 메인 컨테이너 */
 .container {
   width: 80vw; /* 고정된 너비 */
-  /* max-width: 1100px; */
-  min-width: 600px;
+  min-width: 300px; /* 모바일 화면을 위해 최소 너비 조정 */
   height: 90vh; /* 고정된 높이 */
-  /* max-height: 800px; */
   display: flex;
+  flex-direction: column; /* 모바일 화면에서 수직 배열 */
   background: #ffffff;
   border-radius: 15px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -28,7 +27,8 @@ body {
 
 /* 내부 컨테이너 */
 .rectangle-2 {
-  width: 60%;
+  width: 100%;
+  height: 40%; /* 모바일 화면에서 높이 조정 */
   background: rgba(91, 134, 229, 0.51);
   display: flex;
   justify-content: center;
@@ -40,7 +40,7 @@ body {
   font-family: "Alfa Slab One";
   font-style: normal;
   font-weight: 400;
-  font-size: 48px;
+  font-size: 30px; /* 모바일 화면에서 폰트 크기 조정 */
   line-height: 100px;
   letter-spacing: 0.04em;
   color: #ffffff;
@@ -50,26 +50,27 @@ body {
 
 .rectangle-2::before {
   content: "";
-  background: url("../../public/example.jpg") no-repeat center center; /* 이미지 경로와 배치 설정 */
-  background-size: cover; /* 이미지 크기 조절 */
+  background: url("../../public/example.jpg") no-repeat center center;
+  background-size: cover;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 0; /* 텍스트 뒤에 이미지 배치 */
-  border-radius: 15px 0 0 15px; /* 기존 사각형 모서리 반경과 일치시킴 */
+  z-index: 0;
+  border-radius: 15px 15px 0 0; /* 모바일 화면에서 모서리 반경 조정 */
 }
 
 /* 오른쪽 패널 */
 .rectangle-1 {
-  width: 40%;
+  width: 100%;
+  height: 60%; /* 모바일 화면에서 높이 조정 */
   background: #ffffff;
-  border-radius: 0 15px 15px 0;
-  padding: 40px;
+  border-radius: 0 0 15px 15px; /* 모바일 화면에서 모서리 반경 조정 */
+  padding: 20px; /* 모바일 화면에서 패딩 조정 */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   box-sizing: border-box;
   overflow: auto;
 }
@@ -78,11 +79,11 @@ body {
   font-family: "Alfa Slab One";
   font-style: normal;
   font-weight: 800;
-  font-size: 30px;
-  line-height: 40px;
+  font-size: 30px; /* 모바일 화면에서 폰트 크기 조정 */
+  line-height: 30px;
   letter-spacing: 0.08em;
   color: #000000;
-  margin-bottom: 40px;
+  margin-bottom: 20px; /* 모바일 화면에서 마진 조정 */
   text-align: center;
 }
 
@@ -90,21 +91,9 @@ body {
 .user-type-group {
   display: flex;
   justify-content: flex-start;
-  gap: 20px; /* 라벨 사이 간격 조절 */
+  gap: 20px;
   margin-bottom: 20px;
-  margin-top: 20px; /* 위쪽 여백 추가 */
-}
-
-.user-type-group label {
-  display: flex;
-  align-items: center;
-  font-family: "Telegraf", sans-serif; /* 폰트 일관성 */
-  font-size: 16px; /* 폰트 크기 조정 */
-  color: #000000; /* 폰트 색상 */
-}
-
-.user-type-group input[type="radio"] {
-  margin-right: 5px;
+  margin-top: 20px;
 }
 
 /* 폼 */
@@ -267,48 +256,67 @@ body {
   transform: translate(-50%, -50%);
   background-color: #ffffff;
   padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  z-index: 10;
 }
 
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+/* 모바일 화면 */
+@media (min-width: 768px) {
+  .container {
+    flex-direction: row; /* 태블릿 이상의 화면에서 수평 배열 */
+  }
+
+  .rectangle-2 {
+    width: 60%;
+    height: 100%;
+  }
+
+  .rectangle-2 h1 {
+    font-size: 48px; /* 태블릿 이상의 화면에서 폰트 크기 조정 */
+  }
+
+  .rectangle-2::before {
+    border-radius: 15px 0 0 15px; /* 태블릿 이상의 화면에서 모서리 반경 조정 */
+  }
+
+  .rectangle-1 {
+    width: 40%;
+    height: 100%;
+    border-radius: 0 15px 15px 0; /* 태블릿 이상의 화면에서 모서리 반경 조정 */
+    padding: 40px; /* 태블릿 이상의 화면에서 패딩 조정 */
+    justify-content: center;
+  }
+
+  .rectangle-1 h2 {
+    font-size: 30px; /* 태블릿 이상의 화면에서 폰트 크기 조정 */
+    margin-bottom: 40px; /* 태블릿 이상의 화면에서 마진 조정 */
+  }
 }
 
-.modal h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
+/* 태블릿 화면 */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .container {
+    width: 90vw; /* 예시로 너비를 조정합니다 */
+  }
 
-.modal p {
-  font-size: 16px;
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
+  .rectangle-2 {
+    height: 100%; /* 예시로 높이를 조정합니다 */
+    width: 40%;
+  }
 
-.modal button {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #ffffff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
+  .rectangle-1 {
+    width: 60%;
+    height: 100%;
+    padding: 30px; /* 예시로 패딩을 조정합니다 */
+  }
 
-.modal button:hover {
-  background-color: #0056b3;
-}
+  .rectangle-1 h2 {
+    font-size: 30px; /* 예시로 폰트 크기를 조정합니다 */
+    margin-bottom: 30px; /* 예시로 마진을 조정합니다 */
+  }
 
-.info-check a {
-  margin-left: 5px;
-  color: #5b86e5;
+  .rectangle-2::before {
+    border-radius: 15px 0 0 15px; /* 예시로 모서리 반경을 조정합니다 */
+  }
 }
