--- a/src/ui/Home.css
+++ b/src/ui/Home.css
@@ -1,12 +1,28 @@
+/* #E88D67
+#F3F7EC
+#006989
+#005C78 */
+
+html,
 body {
   margin: 0;
-  overflow-y: hidden;
+  padding: 0;
+  height: 100%;
+}
+
+.home-container {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow-y: hidden; /* 필요에 따라 스크롤바를 숨기기 위해 설정 */
 }
 
 .outer {
-  width: 100vw;
-  height: 100vh;
-  overflow-y: auto;
+  width: 100%;
+  height: 100%; /* 부모 요소인 .home-container 크기와 동일하게 설정 */
+  overflow-y: auto; /* 스크롤이 필요한 경우 스크롤바 표시 */
+  background-color: #f3f7ec;
 }
 
 /* 화면에서 스크롤바 안보이게 */
@@ -22,21 +38,49 @@ body {
   font-size: 100px;
 }
 
-.bg-yellow {
-  background-color: #f7f6cf;
-}
-
-.bg-blue {
-  background-color: #b6d8f2;
-}
-
-.bg-pink {
-  
-  background-color: #f4cfdf;
-}
-
 .divider {
-  width: 100%;
-  height: 5px;
-  background-color: gray;
+  display: none;
+}
+
+.start-btn {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  width: 250px;
+  height: 80px;
+  max-width: 250px;
+  margin: 1rem auto;
+  text-transform: uppercase;
+  border: 3px solid #e88d67;
+  border-radius: 15px;
+  background-color: #f3f7ec;
+  color: #e88d67; /* 텍스트 색상 */
+  font-size: 26px;
+  text-align: center;
+  line-height: 80px; /* 버튼의 높이와 같은 line-height 설정 */
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out; /* 배경색과 텍스트 색상 전환 효과 */
+}
+
+.start-btn:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #e88d67;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+  z-index: -1; /* 배경색이 텍스트 뒤로 이동하도록 z-index 설정 */
+}
+
+.start-btn:hover {
+  color: #ffffff;
+  background-color: #e88d67; /* 마우스를 올렸을 때 배경색 변경 */
+  cursor: pointer;
+}
+
+.start-btn:hover:before {
+  transform: translateX(0);
+  z-index: -2; /* 배경색이 텍스트 뒤로 이동하도록 z-index 설정 */
 }
