--- a/src/ui/TopBar.css
+++ b/src/ui/TopBar.css
@@ -1,39 +1,125 @@
 .top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #5b86e5;
-    color: white;
-    padding: 10px 20px;
-    font-family: "Roboto", sans-serif;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 60px; /* 상단 바의 높이를 고정 */
-    z-index: 1000;
+  display: flex;
+  justify-content: space-between; /* 양쪽 끝으로 정렬 */
+  align-items: center;
+  color: white;
+  padding: 0 20px; /* 패딩 조정 */
+  font-family: "Roboto", sans-serif;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px; /* 상단 바의 높이 조정 */
+  /* background-color: #5b86e5; */
+  z-index: 1000;
+}
+
+.top-logo-container {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  margin-right: 20px;
+}
+
+.top-logo {
+  width: 120px; /* 로고 크기를 고정 */
+  height: auto; /* 높이 자동 설정 */
+}
+
+.topbar-links {
+  display: flex;
+  align-items: center;
+  margin: 0 20px;
+}
+
+.topbar-link {
+  padding: 10px 15px; /* 패딩 조정 */
+  cursor: pointer;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px; /* 폰트 크기 조정 */
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+  transition: color 0.3s; /* 호버 효과를 부드럽게 전환 */
+}
+
+.topbar-link:not(:last-child) {
+  margin-right: 10px; /* 링크 사이 간격 조정 */
+}
+
+.topbar-link:hover {
+  color: #21a7a0;
+  border-bottom: 2px solid #21a7a0;
+}
+
+.top-right-container {
+  display: flex;
+  align-items: center;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.profile-img {
+  width: 33px;
+  height: 33px;
+  margin-right: 10px;
+  border-radius: 50%;
+  border: 1.7px solid black;
+}
+
+.checkout {
+  display: flex;
+  align-items: center;
+  border: none;
+  padding: 5px 10px; /* 패딩 조정 */
+  font-size: 16px; /* 폰트 크기 조정 */
+  margin-left: 10px; /* 프로필 이미지와 로그아웃 버튼 사이 간격 */
+  cursor: pointer;
+  border-radius: 20%;
+  background-color: #f5f7f8;
+}
+
+.checkout:hover {
+  background-color: #e1e4e6;
+}
+
+.logout-img {
+  width: 18px;
+  height: 18px;
+  margin-left: 5px; /* 로그아웃 이미지와 텍스트 사이 간격 */
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .top-bar {
+    height: 100px; /* 미디어 쿼리에 맞게 높이 조정 */
   }
-  
-  .left-content {
-    display: flex;
-    align-items: center;
+
+  .top-logo {
+    width: 100px; /* 로고 크기 조정 */
   }
-  
-  .logo {
-    width: 130px; /* 로고 크기를 조정 */
-    height: 130px; /* 로고 크기를 조정 */
-    margin-right: 50px; /* 로고와 문구 사이의 간격 조정 */
-    margin-left: 20px;
+
+  .topbar-link {
+    font-size: 15px; /* 링크 폰트 크기 조정 */
   }
-  
-  .greeting {
-    font-size: 20px;
+
+  .profile-img {
+    width: 30px;
+    height: 30px;
   }
-  
+
   .checkout {
-    cursor: pointer;
-    font-size: 20px;
-    text-decoration: underline;
-    margin-right: 100px;
+    font-size: 14px; /* 체크아웃 버튼 폰트 크기 조정 */
   }
-  
+
+  .logout-img {
+    width: 16px;
+    height: 16px;
+  }
+}
