탑바 모바일 반응형 추가, 마이페이지 수정

--- a/src/ui/DashboardFaculty.css
+++ b/src/ui/DashboardFaculty.css
@@ -6,7 +6,7 @@
   overflow: auto; /* 화면이 작아지면 스크롤 가능하도록 설정 */
 }
 
-.top-bar {
+/* .top-bar {
   width: 100%;
   background-color: white;
   color: black;
@@ -19,4 +19,4 @@
   left: 0;
   z-index: 1000;
 }
-
+ */
