--- a/src/ui/TopBar.css
+++ b/src/ui/TopBar.css
@@ -1,42 +1,35 @@
 .top-bar {
   display: flex;
-  justify-content: space-between; /* 양쪽 끝으로 정렬 */
+  justify-content: space-between;
   align-items: center;
-  color: white;
-  padding: 0 20px; /* 패딩 조정 */
-  font-family: "Roboto", sans-serif;
+  padding: 0 20px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
   position: fixed;
+  width: 100%;
+  height: 80px;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 80px; /* 상단 바의 높이 조정 */
-  /* background-color: #5b86e5; */
-  z-index: 1000;
-}
-
-.top-logo-container {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  margin-right: 20px;
 }
 
 .top-logo {
-  width: 120px; /* 로고 크기를 고정 */
-  height: auto; /* 높이 자동 설정 */
+  width: 120px;
+  height: auto;
 }
 
 .topbar-links {
   display: flex;
   align-items: center;
   margin: 0 20px;
+  flex-grow: 1;
+  justify-content: center;
 }
 
 .topbar-link {
-  padding: 10px 15px; /* 패딩 조정 */
+  padding: 10px 15px;
   cursor: pointer;
   text-align: center;
-  font-family: "Roboto", sans-serif;
   font-size: 18px; /* 폰트 크기 조정 */
   font-weight: bold;
   color: black;
@@ -79,7 +72,8 @@
   align-items: center;
   border: none;
   padding: 5px 10px; /* 패딩 조정 */
-  font-size: 16px; /* 폰트 크기 조정 */
+  font-size: 18px; /* 폰트 크기 조정 */
+  font-weight: bold;
   margin-left: 10px; /* 프로필 이미지와 로그아웃 버튼 사이 간격 */
   cursor: pointer;
   border-radius: 20%;
@@ -94,6 +88,80 @@
   width: 18px;
   height: 18px;
   margin-left: 5px; /* 로그아웃 이미지와 텍스트 사이 간격 */
+}
+
+.hamburger-menu {
+  display: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .topbar-links {
+    display: none; /* 모바일 화면에서 기본적으로 숨김 */
+    flex-direction: column;
+    align-items: flex-end; /* 메뉴 항목을 오른쪽 끝으로 정렬 */
+    position: absolute;
+    top: 60px;
+    right: 0;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    margin: 0;
+    border-radius: 0 0 0 10px;
+  }
+
+  .topbar-link:hover {
+    border: none;
+    color: #21a7a0;
+  }
+
+  .topbar-links.open {
+    display: flex; /* 메뉴가 열릴 때 보이게 설정 */
+  }
+
+  .hamburger-menu {
+    display: block; /* 모바일 화면에서 햄버거 메뉴 표시 */
+  }
+
+  .top-right-container {
+    display: none; /* 모바일 화면에서는 오른쪽 메뉴 숨김 */
+  }
+
+  .topbar-link,
+  .profile,
+  .checkout {
+    margin: 0; /* 마진 없음 */
+    height: 50px; /* 동일한 높이 */
+    padding: 0 15px; /* 좌우 패딩 */
+    width: 100%; /* 전체 너비 사용 */
+    display: flex;
+    align-items: center; /* 수직 중앙 정렬 */
+    justify-content: flex-end; /* 내용물을 오른쪽 끝으로 정렬 */
+  }
+
+  .profile-img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+
+  .checkout {
+    background-color: #ffffff;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .checkout:hover {
+    color: #21a7a0;
+    background-color: #ffffff;
+  }
+
+  .checkout img {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
