--- a/src/ui/FormContainer.css
+++ b/src/ui/FormContainer.css
@@ -1,10 +1,10 @@
 .form-container {
-  width: 90vw; /* 고정된 너비 */
+  width: 90vw;
   height: 85vh;
   background: #ffffff;
   border-radius: 15px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  padding: 30px; /* 콘텐츠와의 여백 */
+  padding: 30px;
   display: flex;
   flex-direction: column;
 }
