--- a/src/ui/Mypage.css
+++ b/src/ui/Mypage.css
@@ -1,27 +1,23 @@
-/* 페이지 이름 스타일 */
 .mp-page-name {
   font-size: 25px;
   font-weight: bold;
-  margin-bottom: 20px; /* 이름과 줄 사이 간격 */
+  margin: 10px 0 10px 0;
 }
 
-/* 구분선 스타일 */
 .mp-line {
   width: 100%;
   height: 1px;
   background-color: #ccc;
-  margin: 10px 0; /* 위아래 여백을 한 번에 설정 */
+  margin: 10px 0;
 }
 
-/* 마이페이지 폼 컨테이너 스타일 */
 .mypage-forms {
-  padding: 20px; /* 내부 여백 늘리기 */
+  padding: 20px;
   overflow-y: auto;
 }
 
-/* 각 섹션 컨테이너 스타일 */
 .mp-form-section {
-  margin-bottom: 25px; /* 섹션 간격 조정 */
+  margin-bottom: 25px;
 }
 
 .pw-change-btn {
@@ -48,7 +44,7 @@
   border: none;
   border-radius: 8px;
   color: #ffffff;
-  padding: 10px 20px; /* 상하 10px, 좌우 20px */
+  padding: 10px 20px;
   font-family: "Telegraf";
   font-style: normal;
   font-weight: 800;
@@ -60,14 +56,12 @@
   align-items: center;
 }
 
-/* 섹션 제목 스타일 */
 .mp-form-section h4 {
   margin-bottom: 10px;
   font-family: "Roboto", sans-serif;
   color: #333; /* 제목 색상 변경 */
 }
 
-/* 입력 레이블 스타일 */
 .mp-form-section label {
   display: block;
   margin-bottom: 8px;
@@ -75,7 +69,6 @@
   color: #555;
 }
 
-/* 입력 필드 스타일 */
 .mp-form-section input[type="password"],
 .mp-form-section input[type="file"] {
   width: 100%; /* 너비 100%로 설정 */
@@ -87,14 +80,12 @@
   box-sizing: border-box; /* 박스 크기를 border-box로 설정하여 패딩과 테두리 포함 */
 }
 
-/* 입력 필드 포커스 시 스타일 */
 .mp-form-section input[type="password"]:focus,
 .mp-form-section input[type="file"]:focus {
   border-color: #21a6a1; /* 포커스 시 테두리 색상 변경 */
   box-shadow: 0 0 8px rgba(33, 166, 161, 0.5); /* 포커스 시 그림자 효과 */
 }
 
-/* 버튼 스타일 */
 .mp-form-section button {
   padding: 12px 24px; /* 내부 패딩 설정 */
   background-color: #21a6a1;
@@ -106,12 +97,10 @@
   transition: background-color 0.3s;
 }
 
-/* 버튼 호버 시 스타일 */
 .mp-form-section button:hover {
   background-color: #1d8e8a; /* 호버 시 배경색 변경 */
 }
 
-/* 프로필 미리보기 이미지 스타일 */
 .profile-preview {
   margin-top: 10px;
   width: 150px;
@@ -121,3 +110,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.mp-profile-img {
+  width: 150px;
+  height: 150px;
+}
