--- a/src/ui/Chatbot.css
+++ b/src/ui/Chatbot.css
@@ -56,6 +56,11 @@
   width: fit-content; /* 내용의 길이에 맞춰 박스 크기 설정 */
 }
 
+.chatbot-pulse {
+  color: white;
+  font-size: 16px;
+}
+
 .chatbot-input-container {
   display: flex;
   padding: 10px;
@@ -68,6 +73,7 @@
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
+  font-size: 16px;
 }
 
 .chatbot-send-button {
@@ -78,21 +84,6 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-}
-
-/* 자음과 모음에 대한 스타일 및 애니메이션 추가 */
-.floating-letter {
-  position: absolute;
-  font-size: 17px;
-  animation: float 15s infinite ease-in-out;
-  opacity: 0.3;
-  z-index: 5; /* 채팅 메시지보다 뒤에 표시 */
-}
-
-.animated-letter {
-  transition: all 1.5s ease-in-out;
-  z-index: 10; /* 애니메이션 동안 채팅 메시지 위로 올림 */
-  opacity: 1; /* 애니메이션 동안 투명도 변경 */
 }
 
 .chatbot-messages-wrapper {
