--- a/src/ui/ChangePasswordModal.css
+++ b/src/ui/ChangePasswordModal.css
@@ -74,9 +74,9 @@
   background-color: #1d8e8a;
 }
 
-.error-message {
+.cp-error-message {
   color: red;
-  margin-top: -10px;
-  margin-bottom: 20px;
-  text-align: center;
+  font-size: 14px;
+  margin-top: 10px;
+  width: 100%;
 }
