--- a/src/ui/Chatbot.css
+++ b/src/ui/Chatbot.css
@@ -1,17 +1,39 @@
 .chatbot-container {
   display: flex;
   flex-direction: column;
-  height: 80vh;
-  width: 100%;
-  background-color: #f5f5f5;
+  height: 90vh;
+  width: 50vw;
+  background-color: #ffffff;
+  border-radius: 20px;
 }
 
 .chatbot-header {
-  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
   background-color: #21a6a1;
   color: white;
   font-size: 24px;
-  text-align: center;
+  border-radius: 20px 20px 0 0;
+}
+
+.back-btn {
+  color: white;
+  background-color: #21a6a1;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.report-btn {
+  border: none;
+  border-radius: 15px;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .chatbot-messages {
@@ -33,6 +55,21 @@
   z-index: 10; /* 채팅 메시지를 맨 위에 표시 */
 }
 
+.chatbot-messages-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+.message-wrapper.bot {
+  display: flex;
+  align-items: flex-start;
+}
+
+.chatbot-profile-img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
 .message {
   padding: 10px;
   margin-bottom: 10px;
@@ -41,11 +78,12 @@
   z-index: 20;
   display: block;
   clear: both;
+  position: relative; /* 시간 표시를 위한 상대 위치 설정 */
 }
 
 .message.user {
-  background-color: #ffffff;
-  margin-left: auto;
+  background-color: #21a6a1;
+  color: white;
   align-self: flex-end;
   width: fit-content; /* 내용의 길이에 맞춰 박스 크기 설정 */
 }
@@ -54,6 +92,43 @@
   background-color: #fb6d47;
   color: #ffffff;
   width: fit-content; /* 내용의 길이에 맞춰 박스 크기 설정 */
+}
+
+.date-message {
+  text-align: center;
+  width: 100%;
+  color: #999;
+  margin-bottom: 10px;
+}
+
+.message-wrapper {
+  display: flex;
+  align-items: flex-start;
+}
+
+.message-wrapper.bot {
+  justify-content: flex-start;
+}
+
+.message-wrapper.user {
+  justify-content: flex-end;
+  flex-direction: row-reverse; /* 시간 표시를 위해 row-reverse로 설정 */
+}
+
+.time {
+  font-size: 12px;
+  color: #999;
+  margin-top: 5px; /* 시간이 메시지 상자와 간격을 두도록 설정 */
+}
+
+.bot-time {
+  margin: 0 0 10px 10px;
+  align-self: flex-end;
+}
+
+.user-time {
+  align-self: flex-end;
+  margin: 0 10px 10px auto;
 }
 
 .chatbot-pulse {
@@ -66,31 +141,40 @@
   padding: 10px;
   background-color: white;
   border-top: 1px solid #ddd;
+  border-radius: 0 0 20px 20px;
+  justify-content: center;
+  align-items: center;
 }
 
 .chatbot-input {
   flex: 1;
+  resize: none;
+  overflow-y: auto;
   padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+  border: none;
   font-size: 16px;
+  outline: none;
+}
+
+.chatbot-input::-webkit-scrollbar {
+  display: none;
 }
 
 .chatbot-send-button {
-  margin-left: 10px;
-  padding: 10px 20px;
+  width: 30px;
+  height: 30px;
   background-color: #21a6a1;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 50%; /* 버튼을 동그랗게 만듦 */
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.chatbot-messages-wrapper {
-  flex: 1; /* 부모 컨테이너의 모든 여유 공간을 차지 */
-  overflow-y: auto; /* Allows messages to scroll */
-  position: relative;
-  z-index: 10; /* 채팅 메시지를 맨 위에 표시 */
+.chatbot-send-button:hover {
+  background-color: #1d8e8a;
 }
 
 @keyframes float {
@@ -115,9 +199,17 @@
 }
 
 @media (max-width: 767px) {
+  .chatbot-container {
+    width: 90vw; /* 반응형 디자인을 위해 너비 조정 */
+  }
+
+  .date-message {
+    font-size: 14px;
+  }
+
   .chatbot-header {
-    font-size: 20px;
-    padding: 15px;
+    font-size: 18px;
+    padding: 10px;
   }
 
   .chatbot-messages {
@@ -128,13 +220,70 @@
     max-width: 80%;
   }
 
+  .message.bot {
+    font-size: 15px;
+  }
+
+  .message.user {
+    font-size: 15px;
+  }
+
   .chatbot-input {
     padding: 8px;
     font-size: 14px;
   }
 
   .chatbot-send-button {
-    padding: 8px 15px;
+    width: 25px;
+    height: 25px;
+    font-size: 12px;
+  }
+
+  .back-btn,
+  .report-btn {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 479px) {
+  .chatbot-container {
+    width: 95vw; /* 더 작은 화면에서는 너비를 더 줄임 */
+  }
+
+  .chatbot-header {
+    font-size: 16px;
+    padding: 8px;
+  }
+
+  .date-message {
     font-size: 14px;
+  }
+
+  .message {
+    max-width: 60%;
+  }
+
+  .message.bot {
+    font-size: 12px;
+  }
+
+  .message.user {
+    font-size: 12px;
+  }
+
+  .chatbot-input {
+    padding: 6px;
+    font-size: 12px;
+  }
+
+  .chatbot-send-button {
+    width: 20px;
+    height: 20px;
+    font-size: 10px;
+  }
+
+  .back-btn,
+  .report-btn {
+    font-size: 12px; /* 버튼 폰트 크기 조정 */
   }
 }
