--- a/src/ui/TopBar.css
+++ b/src/ui/TopBar.css
@@ -8,7 +8,7 @@
   z-index: 1000;
   position: fixed;
   width: 100%;
-  height: 80px;
+  height: 80px; /* 기본 높이 */
   top: 0;
   left: 0;
 }
@@ -91,6 +91,10 @@
 }
 
 @media (max-width: 767px) {
+  .top-bar {
+    height: 60px; /* 모바일 화면에서 높이 조정 */
+  }
+
   .topbar-links {
     display: none; /* 모바일 화면에서 기본적으로 숨김 */
     flex-direction: column;
@@ -142,7 +146,7 @@
 
   .checkout {
     background-color: #ffffff;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
   }
 
@@ -160,7 +164,7 @@
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .top-bar {
-    height: 100px; /* 미디어 쿼리에 맞게 높이 조정 */
+    height: 70px; /* 미디어 쿼리에 맞게 높이 조정 */
   }
 
   .top-logo {
@@ -183,5 +187,15 @@
   .logout-img {
     width: 16px;
     height: 16px;
+  }
+}
+
+@media (max-width: 479px) {
+  .topbar-link {
+    font-size: 16px;
+  }
+
+  .checkout {
+    font-size: 16px;
   }
 }
