--- a/src/ui/Login.css
+++ b/src/ui/Login.css
@@ -163,10 +163,22 @@ body {
   width: 100%;
 }
 
+/* input 화살표 제거 */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox  */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .info-check {
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
-  gap: 20px;
   margin-bottom: 20px;
   margin-top: 20px;
   width: 100%;
@@ -178,6 +190,7 @@ body {
   font-family: "Telegraf", sans-serif;
   font-size: 16px;
   color: #000000;
+  white-space: nowrap;
 }
 
 .info-check input[type="radio"] {
